ring transition from offscreen bug is fixed

--- a/src/app/Home.module.css
+++ b/src/app/Home.module.css
@@ -23,7 +23,7 @@
   color: white;
   border-radius: 50%;
   background-color: black;
-  transition: transform 1s ease, width 1s ease, height 1s ease, margin 1s ease, left 1s ease, top 1s ease, font-size 1s ease;
+  /* transition: transform 1s ease, width 1s ease, height 1s ease, margin 1s ease, left 1s ease, top 1s ease, font-size 1s ease; */
   transform: scale(1);
   position: absolute;
   overflow: visible;
@@ -94,6 +94,8 @@
   /* padding-left: 3%;
   padding-right: 3%; */
   overflow: hidden;
+  transition: transform 1s ease, width 1s ease, height 1s ease, margin 1s ease, left 1s ease, top 1s ease, font-size 1s ease;
+
 }
 .activeRing h1 {
   /* font-size: 3vw; */
@@ -124,7 +126,9 @@
   margin-top: -7.5vw;
   width: 15vw;
   height: 15vw;
-  z-index: -1
+  z-index: -1;
+    transition: transform 1s ease, width 1s ease, height 1s ease, margin 1s ease, left 1s ease, top 1s ease, font-size 1s ease;
+
 }
 .inactiveRight {
   position: absolute;
@@ -136,13 +140,40 @@
   margin-left: 7.5vw;
   margin-right: -7vw;
   z-index: -1;
+    transition: transform 1s ease, width 1s ease, height 1s ease, margin 1s ease, left 1s ease, top 1s ease, font-size 1s ease;
+
+}
+.farRightInactive {
+  position: absolute;
+  opacity: 0;
+  /* top: 38%; */
+  /* right: -100%; */
+  left: 150%;
+  width: 15vw;
+  height: 15vw;
+  margin-top: -7.5vw;
+  margin-left: -7.5vw;
+  z-index: -1;
+}
+.farLeftInactive {
+  position: absolute;
+  opacity: 0;
+  top: 38%;
+  left: -100%;
+  width: 15vw;
+  height: 15vw;
+  margin-top: -7.5vw;
+  margin-left: -7.5vw;
+  z-index: -1;
 }
 .hidden {
   opacity: 0;
   display: hidden;
   left: 150%;
   z-index: -1;
-  transition: transform 1s ease, width 1s ease, height 1s ease, margin 1s ease, left 1s ease top 1s ease;
+    transition: none !important;
+
+  /* transition: transform 1s ease, width 1s ease, height 1s ease, margin 1s ease, left 1s ease top 1s ease; */
 }
 
 .animateRing {
